--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
   </head>
   <body>
-    <header class="container">
-      <h1><a href="index.html">Styles Conference</a></h1>
+    <header class="container group">
+      <h1 class="logo">
+        <a href="index.html"
+          >Styles <br />
+          Conference</a
+        >
+      </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <nav>
         <a href="index.html">Home</a>
@@ -18,7 +23,7 @@
       </nav>
     </header>
 
-    <section class="hero container">
+    <section class="grid">
       <h2>Dedicated to the craft of Building Websites</h2>
       <p>
         Every year the brightest web designers and front-end developers descend
@@ -27,8 +32,8 @@
       <a href="register.html" class="btn btn-alt"> Register Now</a>
     </section>
 
-    <section class="container">
-      <section>
+    <section class="grid">
+      <section class="col-1-3">
         <a href="speakers.html">
           <h5>Speakers</h5>
           <h3>World-Class Speakers</h3>
@@ -38,7 +43,7 @@
           speakers, here to share their stories.
         </p>
       </section>
-      <section>
+      <section class="col-1-3">
         <a href="schedule.html">
           <h5>Schedule</h5>
           <h3>Three Inspiring Days</h3>
@@ -48,7 +53,7 @@
           all-around good times.
         </p>
       </section>
-      <section>
+      <section class="col-1-3">
         <a href="venue.html">
           <h5>Venue</h5>
           <h3>The Chicago Theatre</h3>
@@ -60,7 +65,7 @@
       </section>
     </section>
 
-    <footer class="container">
+    <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
       <nav>
         <a href="index.html">Home</a>
