--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Header -->
 
-    <header class="container group">
+    <header class="primary-header container group">
 
       <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
@@ -44,8 +44,8 @@
 
     <!-- Teasers -->
 
-    <section class="grid">
-
+    <section class="row">
+     <div class="grid">
       <!-- Speakers -->
 
       <section class="col-1-3">
@@ -75,7 +75,7 @@
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
       </section>
-
+     </div>
     </section>
 
     <!-- Footer -->
