--- a/index.html
+++ b/index.html
@@ -45,37 +45,39 @@
     <!-- Teasers -->
 
     <section class="row">
-     <div class="grid">
-      <!-- Speakers -->
+      <div class="grid">
 
-      <section class="col-1-3">
-        <a href="speakers.html">
-          <h5>Speakers</h5>
-          <h3>World-Class Speakers</h3>
-        </a>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-      </section><!--
+        <!-- Speakers -->
 
-      Schedule
+        <section class="teaser col-1-3">
+          <a href="speakers.html">
+            <h5>Speakers</h5>
+            <h3>World-Class Speakers</h3>
+          </a>
+          <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+        </section><!--
 
-      --><section class="col-1-3">
-        <a href="schedule.html">
-          <h5>Schedule</h5>
-          <h3>Three Inspiring Days</h3>
-        </a>
-        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-      </section><!--
+        Schedule
 
-      Venue
+        --><section class="teaser col-1-3">
+          <a href="schedule.html">
+            <h5>Schedule</h5>
+            <h3>Three Inspiring Days</h3>
+          </a>
+          <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        </section><!--
 
-      --><section class="col-1-3">
-        <a href="venue.html">
-          <h5>Venue</h5>
-          <h3>The Chicago Theatre</h3>
-        </a>
-        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
-      </section>
-     </div>
+        Venue
+
+        --><section class="teaser col-1-3">
+          <a href="venue.html">
+            <h5>Venue</h5>
+            <h3>The Chicago Theatre</h3>
+          </a>
+          <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+        </section>
+
+      </div>
     </section>
 
     <!-- Footer -->
@@ -84,7 +86,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav class=""primary-footer container group>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
